fix(app): Correction authentification CSRF/Sanctum
- Fix erreurs 419/403 lors de la connexion
- Suppression middleware web des routes API
- Exception CSRF pour routes API (SPA)
- Nettoyage code de debug temporaire

Authentification session/cookie fonctionnelle

--- a/backend/.env.docker
+++ b/backend/.env.docker
@@ -6,7 +6,7 @@ APP_URL=http://localhost:8000
 
 APP_LOCALE=fr
 APP_FALLBACK_LOCALE=fr
-APP_LOCKED=true
+APP_LOCKED=false
 ACCESS_TOKEN=t0k3n_dev_secret
 FRONTEND_URL=http://localhost:5173
 
